parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    AWAT
    BOOL
    BREAK
    CATCH
    CLASS
    CONST
    CONSTRUCTOR
    CONTINUE
    DEBUGGER
    DEFAULT
    DELETE
    DIVIGUAL
    DO
    EXPORT
    EXTENDS
    FINALDELINEA
    FLOTANTE
    FOR
    GET
    IGUALIGUAL
    IMPLEMENTS
    IMPORT
    INIT
    INTERFACE
    MASIGUAL
    MENOSIGUAL
    MODIGUAL
    MULTIGUAL
    NEW
    NULL
    NUMERO
    OR
    PACKAGE
    PRIVATE
    PROTECTED
    PUBLIC
    PUNTO
    RETURN
    SET
    SUPER
    UNDEFINED
    VOID
    WHILE

Grammar

Rule 0     S' -> js
Rule 1     js -> instrucciones
Rule 2     js -> instrucciones js
Rule 3     instrucciones -> tipo
Rule 4     instrucciones -> declaracionVar
Rule 5     instrucciones -> asignacion
Rule 6     instrucciones -> funcion
Rule 7     instrucciones -> expresion
Rule 8     instrucciones -> comparacion
Rule 9     instrucciones -> arreglo
Rule 10    instrucciones -> if
Rule 11    instrucciones -> switch
Rule 12    declaracionVar -> VAR VARIABLE IGUAL tipo
Rule 13    declaracionVar -> LET VARIABLE IGUAL tipo
Rule 14    asignacion -> VARIABLE IGUAL tipo
Rule 15    funcion -> FUNCTION VARIABLE IZQPAREN VARIABLE DERPAREN IZQLLAVE js DERLLAVE
Rule 16    if -> IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE
Rule 17    if -> IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE ELSE IZQLLAVE js DERLLAVE
Rule 18    switch -> SWITCH IZQPAREN VARIABLE DERPAREN IZQLLAVE CASE tipo DOSPUNTOS js DERLLAVE
Rule 19    tipo -> NUMBER
Rule 20    tipo -> STRING
Rule 21    tipo -> BOOLEAN
Rule 22    tipo -> BIGINT
Rule 23    tipo -> SYMBOL
Rule 24    comparacion -> VARIABLE comparador VARIABLE
Rule 25    comparacion -> expresion comparador expresion
Rule 26    comparador -> MAYORQUE
Rule 27    comparador -> MENORQUE
Rule 28    comparador -> MAYORIGUALQUE
Rule 29    comparador -> MENORIGUALQUE
Rule 30    comparador -> NOIGUALQUE
Rule 31    arreglo -> VAR VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
Rule 32    arreglo -> LET VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
Rule 33    lista -> lista COMA lista
Rule 34    lista -> STRING
Rule 35    lista -> SYMBOL
Rule 36    lista -> NUMBER
Rule 37    lista -> BIGINT
Rule 38    lista -> BOOLEAN
Rule 39    expresion -> expresion MAS term
Rule 40    expresion -> expresion MENOS term
Rule 41    expresion -> term
Rule 42    term -> term MULT factor
Rule 43    term -> term DIV factor
Rule 44    term -> factor
Rule 45    factor -> NUMBER
Rule 46    factor -> IZQPAREN expresion DERPAREN

Terminals, with rules where they appear

AND                  : 
AWAT                 : 
BIGINT               : 22 37
BOOL                 : 
BOOLEAN              : 21 38
BREAK                : 
CASE                 : 18
CATCH                : 
CLASS                : 
COMA                 : 33
CONST                : 
CONSTRUCTOR          : 
CONTINUE             : 
DEBUGGER             : 
DEFAULT              : 
DELETE               : 
DERCORCHETE          : 31 32
DERLLAVE             : 15 16 17 17 18
DERPAREN             : 15 16 17 18 46
DIV                  : 43
DIVIGUAL             : 
DO                   : 
DOSPUNTOS            : 18
ELSE                 : 17
EXPORT               : 
EXTENDS              : 
FINALDELINEA         : 
FLOTANTE             : 
FOR                  : 
FUNCTION             : 15
GET                  : 
IF                   : 16 17
IGUAL                : 12 13 14 31 32
IGUALIGUAL           : 
IMPLEMENTS           : 
IMPORT               : 
INIT                 : 
INTERFACE            : 
IZQCORCHETE          : 31 32
IZQLLAVE             : 15 16 17 17 18
IZQPAREN             : 15 16 17 18 46
LET                  : 13 32
MAS                  : 39
MASIGUAL             : 
MAYORIGUALQUE        : 28
MAYORQUE             : 26
MENORIGUALQUE        : 29
MENORQUE             : 27
MENOS                : 40
MENOSIGUAL           : 
MODIGUAL             : 
MULT                 : 42
MULTIGUAL            : 
NEW                  : 
NOIGUALQUE           : 30
NULL                 : 
NUMBER               : 19 36 45
NUMERO               : 
OR                   : 
PACKAGE              : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
PUNTO                : 
RETURN               : 
SET                  : 
STRING               : 20 34
SUPER                : 
SWITCH               : 18
SYMBOL               : 23 35
UNDEFINED            : 
VAR                  : 12 31
VARIABLE             : 12 13 14 15 15 18 24 24 31 32
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

arreglo              : 9
asignacion           : 5
comparacion          : 8 16 17
comparador           : 24 25
declaracionVar       : 4
expresion            : 7 25 25 39 40 46
factor               : 42 43 44
funcion              : 6
if                   : 10
instrucciones        : 1 2
js                   : 2 15 16 17 17 18 0
lista                : 31 32 33 33
switch               : 11
term                 : 39 40 41 42 43
tipo                 : 3 12 13 14 18

Parsing method: LALR

state 0

    (0) S' -> . js
    (1) js -> . instrucciones
    (2) js -> . instrucciones js
    (3) instrucciones -> . tipo
    (4) instrucciones -> . declaracionVar
    (5) instrucciones -> . asignacion
    (6) instrucciones -> . funcion
    (7) instrucciones -> . expresion
    (8) instrucciones -> . comparacion
    (9) instrucciones -> . arreglo
    (10) instrucciones -> . if
    (11) instrucciones -> . switch
    (19) tipo -> . NUMBER
    (20) tipo -> . STRING
    (21) tipo -> . BOOLEAN
    (22) tipo -> . BIGINT
    (23) tipo -> . SYMBOL
    (12) declaracionVar -> . VAR VARIABLE IGUAL tipo
    (13) declaracionVar -> . LET VARIABLE IGUAL tipo
    (14) asignacion -> . VARIABLE IGUAL tipo
    (15) funcion -> . FUNCTION VARIABLE IZQPAREN VARIABLE DERPAREN IZQLLAVE js DERLLAVE
    (39) expresion -> . expresion MAS term
    (40) expresion -> . expresion MENOS term
    (41) expresion -> . term
    (24) comparacion -> . VARIABLE comparador VARIABLE
    (25) comparacion -> . expresion comparador expresion
    (31) arreglo -> . VAR VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
    (32) arreglo -> . LET VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
    (16) if -> . IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE
    (17) if -> . IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE ELSE IZQLLAVE js DERLLAVE
    (18) switch -> . SWITCH IZQPAREN VARIABLE DERPAREN IZQLLAVE CASE tipo DOSPUNTOS js DERLLAVE
    (42) term -> . term MULT factor
    (43) term -> . term DIV factor
    (44) term -> . factor
    (45) factor -> . NUMBER
    (46) factor -> . IZQPAREN expresion DERPAREN

    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    BIGINT          shift and go to state 15
    SYMBOL          shift and go to state 16
    VAR             shift and go to state 17
    LET             shift and go to state 19
    VARIABLE        shift and go to state 18
    FUNCTION        shift and go to state 20
    IF              shift and go to state 23
    SWITCH          shift and go to state 24
    IZQPAREN        shift and go to state 21

    js                             shift and go to state 1
    instrucciones                  shift and go to state 2
    tipo                           shift and go to state 3
    declaracionVar                 shift and go to state 4
    asignacion                     shift and go to state 5
    funcion                        shift and go to state 6
    expresion                      shift and go to state 7
    comparacion                    shift and go to state 8
    arreglo                        shift and go to state 9
    if                             shift and go to state 10
    switch                         shift and go to state 11
    term                           shift and go to state 22
    factor                         shift and go to state 25

state 1

    (0) S' -> js .



state 2

    (1) js -> instrucciones .
    (2) js -> instrucciones . js
    (1) js -> . instrucciones
    (2) js -> . instrucciones js
    (3) instrucciones -> . tipo
    (4) instrucciones -> . declaracionVar
    (5) instrucciones -> . asignacion
    (6) instrucciones -> . funcion
    (7) instrucciones -> . expresion
    (8) instrucciones -> . comparacion
    (9) instrucciones -> . arreglo
    (10) instrucciones -> . if
    (11) instrucciones -> . switch
    (19) tipo -> . NUMBER
    (20) tipo -> . STRING
    (21) tipo -> . BOOLEAN
    (22) tipo -> . BIGINT
    (23) tipo -> . SYMBOL
    (12) declaracionVar -> . VAR VARIABLE IGUAL tipo
    (13) declaracionVar -> . LET VARIABLE IGUAL tipo
    (14) asignacion -> . VARIABLE IGUAL tipo
    (15) funcion -> . FUNCTION VARIABLE IZQPAREN VARIABLE DERPAREN IZQLLAVE js DERLLAVE
    (39) expresion -> . expresion MAS term
    (40) expresion -> . expresion MENOS term
    (41) expresion -> . term
    (24) comparacion -> . VARIABLE comparador VARIABLE
    (25) comparacion -> . expresion comparador expresion
    (31) arreglo -> . VAR VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
    (32) arreglo -> . LET VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE
    (16) if -> . IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE
    (17) if -> . IF IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE ELSE IZQLLAVE js DERLLAVE
    (18) switch -> . SWITCH IZQPAREN VARIABLE DERPAREN IZQLLAVE CASE tipo DOSPUNTOS js DERLLAVE
    (42) term -> . term MULT factor
    (43) term -> . term DIV factor
    (44) term -> . factor
    (45) factor -> . NUMBER
    (46) factor -> . IZQPAREN expresion DERPAREN

    $end            reduce using rule 1 (js -> instrucciones .)
    DERLLAVE        reduce using rule 1 (js -> instrucciones .)
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    BOOLEAN         shift and go to state 14
    BIGINT          shift and go to state 15
    SYMBOL          shift and go to state 16
    VAR             shift and go to state 17
    LET             shift and go to state 19
    VARIABLE        shift and go to state 18
    FUNCTION        shift and go to state 20
    IF              shift and go to state 23
    SWITCH          shift and go to state 24
    IZQPAREN        shift and go to state 21

    instrucciones                  shift and go to state 2
    js                             shift and go to state 26
    tipo                           shift and go to state 3
    declaracionVar                 shift and go to state 4
    asignacion                     shift and go to state 5
    funcion                        shift and go to state 6
    expresion                      shift and go to state 7
    comparacion                    shift and go to state 8
    arreglo                        shift and go to state 9
    if                             shift and go to state 10
    switch                         shift and go to state 11
    term                           shift and go to state 22
    factor                         shift and go to state 25

state 3

    (3) instrucciones -> tipo .

    NUMBER          reduce using rule 3 (instrucciones -> tipo .)
    STRING          reduce using rule 3 (instrucciones -> tipo .)
    BOOLEAN         reduce using rule 3 (instrucciones -> tipo .)
    BIGINT          reduce using rule 3 (instrucciones -> tipo .)
    SYMBOL          reduce using rule 3 (instrucciones -> tipo .)
    VAR             reduce using rule 3 (instrucciones -> tipo .)
    LET             reduce using rule 3 (instrucciones -> tipo .)
    VARIABLE        reduce using rule 3 (instrucciones -> tipo .)
    FUNCTION        reduce using rule 3 (instrucciones -> tipo .)
    IF              reduce using rule 3 (instrucciones -> tipo .)
    SWITCH          reduce using rule 3 (instrucciones -> tipo .)
    IZQPAREN        reduce using rule 3 (instrucciones -> tipo .)
    $end            reduce using rule 3 (instrucciones -> tipo .)
    DERLLAVE        reduce using rule 3 (instrucciones -> tipo .)


state 4

    (4) instrucciones -> declaracionVar .

    NUMBER          reduce using rule 4 (instrucciones -> declaracionVar .)
    STRING          reduce using rule 4 (instrucciones -> declaracionVar .)
    BOOLEAN         reduce using rule 4 (instrucciones -> declaracionVar .)
    BIGINT          reduce using rule 4 (instrucciones -> declaracionVar .)
    SYMBOL          reduce using rule 4 (instrucciones -> declaracionVar .)
    VAR             reduce using rule 4 (instrucciones -> declaracionVar .)
    LET             reduce using rule 4 (instrucciones -> declaracionVar .)
    VARIABLE        reduce using rule 4 (instrucciones -> declaracionVar .)
    FUNCTION        reduce using rule 4 (instrucciones -> declaracionVar .)
    IF              reduce using rule 4 (instrucciones -> declaracionVar .)
    SWITCH          reduce using rule 4 (instrucciones -> declaracionVar .)
    IZQPAREN        reduce using rule 4 (instrucciones -> declaracionVar .)
    $end            reduce using rule 4 (instrucciones -> declaracionVar .)
    DERLLAVE        reduce using rule 4 (instrucciones -> declaracionVar .)


state 5

    (5) instrucciones -> asignacion .

    NUMBER          reduce using rule 5 (instrucciones -> asignacion .)
    STRING          reduce using rule 5 (instrucciones -> asignacion .)
    BOOLEAN         reduce using rule 5 (instrucciones -> asignacion .)
    BIGINT          reduce using rule 5 (instrucciones -> asignacion .)
    SYMBOL          reduce using rule 5 (instrucciones -> asignacion .)
    VAR             reduce using rule 5 (instrucciones -> asignacion .)
    LET             reduce using rule 5 (instrucciones -> asignacion .)
    VARIABLE        reduce using rule 5 (instrucciones -> asignacion .)
    FUNCTION        reduce using rule 5 (instrucciones -> asignacion .)
    IF              reduce using rule 5 (instrucciones -> asignacion .)
    SWITCH          reduce using rule 5 (instrucciones -> asignacion .)
    IZQPAREN        reduce using rule 5 (instrucciones -> asignacion .)
    $end            reduce using rule 5 (instrucciones -> asignacion .)
    DERLLAVE        reduce using rule 5 (instrucciones -> asignacion .)


state 6

    (6) instrucciones -> funcion .

    NUMBER          reduce using rule 6 (instrucciones -> funcion .)
    STRING          reduce using rule 6 (instrucciones -> funcion .)
    BOOLEAN         reduce using rule 6 (instrucciones -> funcion .)
    BIGINT          reduce using rule 6 (instrucciones -> funcion .)
    SYMBOL          reduce using rule 6 (instrucciones -> funcion .)
    VAR             reduce using rule 6 (instrucciones -> funcion .)
    LET             reduce using rule 6 (instrucciones -> funcion .)
    VARIABLE        reduce using rule 6 (instrucciones -> funcion .)
    FUNCTION        reduce using rule 6 (instrucciones -> funcion .)
    IF              reduce using rule 6 (instrucciones -> funcion .)
    SWITCH          reduce using rule 6 (instrucciones -> funcion .)
    IZQPAREN        reduce using rule 6 (instrucciones -> funcion .)
    $end            reduce using rule 6 (instrucciones -> funcion .)
    DERLLAVE        reduce using rule 6 (instrucciones -> funcion .)


state 7

    (7) instrucciones -> expresion .
    (39) expresion -> expresion . MAS term
    (40) expresion -> expresion . MENOS term
    (25) comparacion -> expresion . comparador expresion
    (26) comparador -> . MAYORQUE
    (27) comparador -> . MENORQUE
    (28) comparador -> . MAYORIGUALQUE
    (29) comparador -> . MENORIGUALQUE
    (30) comparador -> . NOIGUALQUE

    NUMBER          reduce using rule 7 (instrucciones -> expresion .)
    STRING          reduce using rule 7 (instrucciones -> expresion .)
    BOOLEAN         reduce using rule 7 (instrucciones -> expresion .)
    BIGINT          reduce using rule 7 (instrucciones -> expresion .)
    SYMBOL          reduce using rule 7 (instrucciones -> expresion .)
    VAR             reduce using rule 7 (instrucciones -> expresion .)
    LET             reduce using rule 7 (instrucciones -> expresion .)
    VARIABLE        reduce using rule 7 (instrucciones -> expresion .)
    FUNCTION        reduce using rule 7 (instrucciones -> expresion .)
    IF              reduce using rule 7 (instrucciones -> expresion .)
    SWITCH          reduce using rule 7 (instrucciones -> expresion .)
    IZQPAREN        reduce using rule 7 (instrucciones -> expresion .)
    $end            reduce using rule 7 (instrucciones -> expresion .)
    DERLLAVE        reduce using rule 7 (instrucciones -> expresion .)
    MAS             shift and go to state 27
    MENOS           shift and go to state 28
    MAYORQUE        shift and go to state 30
    MENORQUE        shift and go to state 31
    MAYORIGUALQUE   shift and go to state 32
    MENORIGUALQUE   shift and go to state 33
    NOIGUALQUE      shift and go to state 34

    comparador                     shift and go to state 29

state 8

    (8) instrucciones -> comparacion .

    NUMBER          reduce using rule 8 (instrucciones -> comparacion .)
    STRING          reduce using rule 8 (instrucciones -> comparacion .)
    BOOLEAN         reduce using rule 8 (instrucciones -> comparacion .)
    BIGINT          reduce using rule 8 (instrucciones -> comparacion .)
    SYMBOL          reduce using rule 8 (instrucciones -> comparacion .)
    VAR             reduce using rule 8 (instrucciones -> comparacion .)
    LET             reduce using rule 8 (instrucciones -> comparacion .)
    VARIABLE        reduce using rule 8 (instrucciones -> comparacion .)
    FUNCTION        reduce using rule 8 (instrucciones -> comparacion .)
    IF              reduce using rule 8 (instrucciones -> comparacion .)
    SWITCH          reduce using rule 8 (instrucciones -> comparacion .)
    IZQPAREN        reduce using rule 8 (instrucciones -> comparacion .)
    $end            reduce using rule 8 (instrucciones -> comparacion .)
    DERLLAVE        reduce using rule 8 (instrucciones -> comparacion .)


state 9

    (9) instrucciones -> arreglo .

    NUMBER          reduce using rule 9 (instrucciones -> arreglo .)
    STRING          reduce using rule 9 (instrucciones -> arreglo .)
    BOOLEAN         reduce using rule 9 (instrucciones -> arreglo .)
    BIGINT          reduce using rule 9 (instrucciones -> arreglo .)
    SYMBOL          reduce using rule 9 (instrucciones -> arreglo .)
    VAR             reduce using rule 9 (instrucciones -> arreglo .)
    LET             reduce using rule 9 (instrucciones -> arreglo .)
    VARIABLE        reduce using rule 9 (instrucciones -> arreglo .)
    FUNCTION        reduce using rule 9 (instrucciones -> arreglo .)
    IF              reduce using rule 9 (instrucciones -> arreglo .)
    SWITCH          reduce using rule 9 (instrucciones -> arreglo .)
    IZQPAREN        reduce using rule 9 (instrucciones -> arreglo .)
    $end            reduce using rule 9 (instrucciones -> arreglo .)
    DERLLAVE        reduce using rule 9 (instrucciones -> arreglo .)


state 10

    (10) instrucciones -> if .

    NUMBER          reduce using rule 10 (instrucciones -> if .)
    STRING          reduce using rule 10 (instrucciones -> if .)
    BOOLEAN         reduce using rule 10 (instrucciones -> if .)
    BIGINT          reduce using rule 10 (instrucciones -> if .)
    SYMBOL          reduce using rule 10 (instrucciones -> if .)
    VAR             reduce using rule 10 (instrucciones -> if .)
    LET             reduce using rule 10 (instrucciones -> if .)
    VARIABLE        reduce using rule 10 (instrucciones -> if .)
    FUNCTION        reduce using rule 10 (instrucciones -> if .)
    IF              reduce using rule 10 (instrucciones -> if .)
    SWITCH          reduce using rule 10 (instrucciones -> if .)
    IZQPAREN        reduce using rule 10 (instrucciones -> if .)
    $end            reduce using rule 10 (instrucciones -> if .)
    DERLLAVE        reduce using rule 10 (instrucciones -> if .)


state 11

    (11) instrucciones -> switch .

    NUMBER          reduce using rule 11 (instrucciones -> switch .)
    STRING          reduce using rule 11 (instrucciones -> switch .)
    BOOLEAN         reduce using rule 11 (instrucciones -> switch .)
    BIGINT          reduce using rule 11 (instrucciones -> switch .)
    SYMBOL          reduce using rule 11 (instrucciones -> switch .)
    VAR             reduce using rule 11 (instrucciones -> switch .)
    LET             reduce using rule 11 (instrucciones -> switch .)
    VARIABLE        reduce using rule 11 (instrucciones -> switch .)
    FUNCTION        reduce using rule 11 (instrucciones -> switch .)
    IF              reduce using rule 11 (instrucciones -> switch .)
    SWITCH          reduce using rule 11 (instrucciones -> switch .)
    IZQPAREN        reduce using rule 11 (instrucciones -> switch .)
    $end            reduce using rule 11 (instrucciones -> switch .)
    DERLLAVE        reduce using rule 11 (instrucciones -> switch .)


state 12

    (19) tipo -> NUMBER .
    (45) factor -> NUMBER .

  ! reduce/reduce conflict for NUMBER resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for STRING resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for BIGINT resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for SYMBOL resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for VAR resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for LET resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for IF resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for SWITCH resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for IZQPAREN resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for $end resolved using rule 19 (tipo -> NUMBER .)
  ! reduce/reduce conflict for DERLLAVE resolved using rule 19 (tipo -> NUMBER .)
    NUMBER          reduce using rule 19 (tipo -> NUMBER .)
    STRING          reduce using rule 19 (tipo -> NUMBER .)
    BOOLEAN         reduce using rule 19 (tipo -> NUMBER .)
    BIGINT          reduce using rule 19 (tipo -> NUMBER .)
    SYMBOL          reduce using rule 19 (tipo -> NUMBER .)
    VAR             reduce using rule 19 (tipo -> NUMBER .)
    LET             reduce using rule 19 (tipo -> NUMBER .)
    VARIABLE        reduce using rule 19 (tipo -> NUMBER .)
    FUNCTION        reduce using rule 19 (tipo -> NUMBER .)
    IF              reduce using rule 19 (tipo -> NUMBER .)
    SWITCH          reduce using rule 19 (tipo -> NUMBER .)
    IZQPAREN        reduce using rule 19 (tipo -> NUMBER .)
    $end            reduce using rule 19 (tipo -> NUMBER .)
    DERLLAVE        reduce using rule 19 (tipo -> NUMBER .)
    MULT            reduce using rule 45 (factor -> NUMBER .)
    DIV             reduce using rule 45 (factor -> NUMBER .)
    MAS             reduce using rule 45 (factor -> NUMBER .)
    MENOS           reduce using rule 45 (factor -> NUMBER .)
    MAYORQUE        reduce using rule 45 (factor -> NUMBER .)
    MENORQUE        reduce using rule 45 (factor -> NUMBER .)
    MAYORIGUALQUE   reduce using rule 45 (factor -> NUMBER .)
    MENORIGUALQUE   reduce using rule 45 (factor -> NUMBER .)
    NOIGUALQUE      reduce using rule 45 (factor -> NUMBER .)

  ! NUMBER          [ reduce using rule 45 (factor -> NUMBER .) ]
  ! STRING          [ reduce using rule 45 (factor -> NUMBER .) ]
  ! BOOLEAN         [ reduce using rule 45 (factor -> NUMBER .) ]
  ! BIGINT          [ reduce using rule 45 (factor -> NUMBER .) ]
  ! SYMBOL          [ reduce using rule 45 (factor -> NUMBER .) ]
  ! VAR             [ reduce using rule 45 (factor -> NUMBER .) ]
  ! LET             [ reduce using rule 45 (factor -> NUMBER .) ]
  ! VARIABLE        [ reduce using rule 45 (factor -> NUMBER .) ]
  ! FUNCTION        [ reduce using rule 45 (factor -> NUMBER .) ]
  ! IF              [ reduce using rule 45 (factor -> NUMBER .) ]
  ! SWITCH          [ reduce using rule 45 (factor -> NUMBER .) ]
  ! IZQPAREN        [ reduce using rule 45 (factor -> NUMBER .) ]
  ! $end            [ reduce using rule 45 (factor -> NUMBER .) ]
  ! DERLLAVE        [ reduce using rule 45 (factor -> NUMBER .) ]


state 13

    (20) tipo -> STRING .

    NUMBER          reduce using rule 20 (tipo -> STRING .)
    STRING          reduce using rule 20 (tipo -> STRING .)
    BOOLEAN         reduce using rule 20 (tipo -> STRING .)
    BIGINT          reduce using rule 20 (tipo -> STRING .)
    SYMBOL          reduce using rule 20 (tipo -> STRING .)
    VAR             reduce using rule 20 (tipo -> STRING .)
    LET             reduce using rule 20 (tipo -> STRING .)
    VARIABLE        reduce using rule 20 (tipo -> STRING .)
    FUNCTION        reduce using rule 20 (tipo -> STRING .)
    IF              reduce using rule 20 (tipo -> STRING .)
    SWITCH          reduce using rule 20 (tipo -> STRING .)
    IZQPAREN        reduce using rule 20 (tipo -> STRING .)
    $end            reduce using rule 20 (tipo -> STRING .)
    DERLLAVE        reduce using rule 20 (tipo -> STRING .)
    DOSPUNTOS       reduce using rule 20 (tipo -> STRING .)


state 14

    (21) tipo -> BOOLEAN .

    NUMBER          reduce using rule 21 (tipo -> BOOLEAN .)
    STRING          reduce using rule 21 (tipo -> BOOLEAN .)
    BOOLEAN         reduce using rule 21 (tipo -> BOOLEAN .)
    BIGINT          reduce using rule 21 (tipo -> BOOLEAN .)
    SYMBOL          reduce using rule 21 (tipo -> BOOLEAN .)
    VAR             reduce using rule 21 (tipo -> BOOLEAN .)
    LET             reduce using rule 21 (tipo -> BOOLEAN .)
    VARIABLE        reduce using rule 21 (tipo -> BOOLEAN .)
    FUNCTION        reduce using rule 21 (tipo -> BOOLEAN .)
    IF              reduce using rule 21 (tipo -> BOOLEAN .)
    SWITCH          reduce using rule 21 (tipo -> BOOLEAN .)
    IZQPAREN        reduce using rule 21 (tipo -> BOOLEAN .)
    $end            reduce using rule 21 (tipo -> BOOLEAN .)
    DERLLAVE        reduce using rule 21 (tipo -> BOOLEAN .)
    DOSPUNTOS       reduce using rule 21 (tipo -> BOOLEAN .)


state 15

    (22) tipo -> BIGINT .

    NUMBER          reduce using rule 22 (tipo -> BIGINT .)
    STRING          reduce using rule 22 (tipo -> BIGINT .)
    BOOLEAN         reduce using rule 22 (tipo -> BIGINT .)
    BIGINT          reduce using rule 22 (tipo -> BIGINT .)
    SYMBOL          reduce using rule 22 (tipo -> BIGINT .)
    VAR             reduce using rule 22 (tipo -> BIGINT .)
    LET             reduce using rule 22 (tipo -> BIGINT .)
    VARIABLE        reduce using rule 22 (tipo -> BIGINT .)
    FUNCTION        reduce using rule 22 (tipo -> BIGINT .)
    IF              reduce using rule 22 (tipo -> BIGINT .)
    SWITCH          reduce using rule 22 (tipo -> BIGINT .)
    IZQPAREN        reduce using rule 22 (tipo -> BIGINT .)
    $end            reduce using rule 22 (tipo -> BIGINT .)
    DERLLAVE        reduce using rule 22 (tipo -> BIGINT .)
    DOSPUNTOS       reduce using rule 22 (tipo -> BIGINT .)


state 16

    (23) tipo -> SYMBOL .

    NUMBER          reduce using rule 23 (tipo -> SYMBOL .)
    STRING          reduce using rule 23 (tipo -> SYMBOL .)
    BOOLEAN         reduce using rule 23 (tipo -> SYMBOL .)
    BIGINT          reduce using rule 23 (tipo -> SYMBOL .)
    SYMBOL          reduce using rule 23 (tipo -> SYMBOL .)
    VAR             reduce using rule 23 (tipo -> SYMBOL .)
    LET             reduce using rule 23 (tipo -> SYMBOL .)
    VARIABLE        reduce using rule 23 (tipo -> SYMBOL .)
    FUNCTION        reduce using rule 23 (tipo -> SYMBOL .)
    IF              reduce using rule 23 (tipo -> SYMBOL .)
    SWITCH          reduce using rule 23 (tipo -> SYMBOL .)
    IZQPAREN        reduce using rule 23 (tipo -> SYMBOL .)
    $end            reduce using rule 23 (tipo -> SYMBOL .)
    DERLLAVE        reduce using rule 23 (tipo -> SYMBOL .)
    DOSPUNTOS       reduce using rule 23 (tipo -> SYMBOL .)


state 17

    (12) declaracionVar -> VAR . VARIABLE IGUAL tipo
    (31) arreglo -> VAR . VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE

    VARIABLE        shift and go to state 35


state 18

    (14) asignacion -> VARIABLE . IGUAL tipo
    (24) comparacion -> VARIABLE . comparador VARIABLE
    (26) comparador -> . MAYORQUE
    (27) comparador -> . MENORQUE
    (28) comparador -> . MAYORIGUALQUE
    (29) comparador -> . MENORIGUALQUE
    (30) comparador -> . NOIGUALQUE

    IGUAL           shift and go to state 36
    MAYORQUE        shift and go to state 30
    MENORQUE        shift and go to state 31
    MAYORIGUALQUE   shift and go to state 32
    MENORIGUALQUE   shift and go to state 33
    NOIGUALQUE      shift and go to state 34

    comparador                     shift and go to state 37

state 19

    (13) declaracionVar -> LET . VARIABLE IGUAL tipo
    (32) arreglo -> LET . VARIABLE IGUAL IZQCORCHETE lista DERCORCHETE

    VARIABLE        shift and go to state 38


state 20

    (15) funcion -> FUNCTION . VARIABLE IZQPAREN VARIABLE DERPAREN IZQLLAVE js DERLLAVE

    VARIABLE        shift and go to state 39


state 21

    (46) factor -> IZQPAREN . expresion DERPAREN
    (39) expresion -> . expresion MAS term
    (40) expresion -> . expresion MENOS term
    (41) expresion -> . term
    (42) term -> . term MULT factor
    (43) term -> . term DIV factor
    (44) term -> . factor
    (45) factor -> . NUMBER
    (46) factor -> . IZQPAREN expresion DERPAREN

    NUMBER          shift and go to state 41
    IZQPAREN        shift and go to state 21

    expresion                      shift and go to state 40
    term                           shift and go to state 22
    factor                         shift and go to state 25

state 22

    (41) expresion -> term .
    (42) term -> term . MULT factor
    (43) term -> term . DIV factor

    MAS             reduce using rule 41 (expresion -> term .)
    MENOS           reduce using rule 41 (expresion -> term .)
    MAYORQUE        reduce using rule 41 (expresion -> term .)
    MENORQUE        reduce using rule 41 (expresion -> term .)
    MAYORIGUALQUE   reduce using rule 41 (expresion -> term .)
    MENORIGUALQUE   reduce using rule 41 (expresion -> term .)
    NOIGUALQUE      reduce using rule 41 (expresion -> term .)
    NUMBER          reduce using rule 41 (expresion -> term .)
    STRING          reduce using rule 41 (expresion -> term .)
    BOOLEAN         reduce using rule 41 (expresion -> term .)
    BIGINT          reduce using rule 41 (expresion -> term .)
    SYMBOL          reduce using rule 41 (expresion -> term .)
    VAR             reduce using rule 41 (expresion -> term .)
    LET             reduce using rule 41 (expresion -> term .)
    VARIABLE        reduce using rule 41 (expresion -> term .)
    FUNCTION        reduce using rule 41 (expresion -> term .)
    IF              reduce using rule 41 (expresion -> term .)
    SWITCH          reduce using rule 41 (expresion -> term .)
    IZQPAREN        reduce using rule 41 (expresion -> term .)
    $end            reduce using rule 41 (expresion -> term .)
    DERLLAVE        reduce using rule 41 (expresion -> term .)
    DERPAREN        reduce using rule 41 (expresion -> term .)
    MULT            shift and go to state 42
    DIV             shift and go to state 43


state 23

    (16) if -> IF . IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE
    (17) if -> IF . IZQPAREN comparacion DERPAREN IZQLLAVE js DERLLAVE ELSE IZQLLAVE js DERLLAVE

    IZQPAREN        shift and go to state 44


state 24

    (18) switch -> SWITCH . IZQPAREN VARIABLE DERPAREN IZQLLAVE CASE tipo DOSPUNTOS js DERLLAVE

    IZQPAREN        shift and go to state 45


state 25

    (44) term -> factor .
